my-web/hello-static-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: us-central1-docker.pkg.dev/web-project-466617/hello-repo/hello-app:v2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  type: LoadBalancer
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 80
