my-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-ip-frontend
    networking.gke.io/managed-certificates: hello-app-cert
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: 34.54.220.184.sslip.io   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 80
